--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,14 @@
 {
+     "trailingComma": "all",
+  "overrides": [
+    {
+      "files": ["*.json", "*.json5", "*.jsonc"],
+      "options": {
+        "trailingComma": "none"
+      }
+    }
+  ],
      "semi": true,
-     "trailingComma": "es5",
      "singleQuote": true,
      "printWidth": 80,
      "tabWidth": 2,
