--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "fresh": "rm -rf node_modules package-lock.json .next .turbo dist && npm install"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
