--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.537.0",
     "next": "^15.4.6",
+    "next-pwa": "^5.6.0",
     "postcss-nesting": "^12.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
